--- a/PhotoCard/css/style.css
+++ b/PhotoCard/css/style.css
@@ -81,6 +81,8 @@ transition: all 0.3s;
     position: absolute;
     width: 100%;
     top: -50px;
+    font-weight: 1000;
+    font-size: 1.5rem;
 }
 
 .detail-container > .color{
